# soundplane

Builds/MacOSX/: Info.plist
Builds/MacOSX/Soundplane.xcodeproj/: project.pbxproj
Linux/hello-soundplane/: CMakeLists.txt  main.cpp
SoundplaneLib/: CMakeLists.txt  LibusbSoundplaneDriver.cpp  LibusbSoundplaneDriver.h  MacSoundplaneDriver.h  NOTES.md  SensorFrame.cpp  Unpacker.h
